--- a/BASICInterpreter/nbproject/project.properties
+++ b/BASICInterpreter/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=models.dao.SyntaxValidator
+main.class=models.toolkit.ProgramLoader
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
